--- a/index-ts.html
+++ b/index-ts.html
@@ -61,6 +61,16 @@
             <h3>Ceci est un retour d'expérience</h3>
             <h4 class="fragment">Pas une introduction</h4>
         </section>
+        <section>
+            <h2>Rust&nbsp;?</h2>
+            <ul>
+                <li>Language bas niveau - concurrent direct de C ou de C++</li>
+                <li class="fragment">Développé par Mozilla (début en 2010, release en 2015)</li>
+                <li class="fragment">Accent mis sur la securité (au niveau de la mémoire) et la vitesse (d'exécution)
+                </li>
+                <li class="fragment">Langage le plus aimé sur stackoverflow depuis 7 ans</li>
+            </ul>
+        </section>
 
         <section>
             <h2>Qui utilise Rust&nbsp;?</h2>
@@ -70,17 +80,6 @@
                 <li>Microsoft (Azure IOT edge)</li>
                 <li>Linux Kernel</li>
                 <li>npm, Dropbox, Atlassian, etc.</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Rust&nbsp;?</h2>
-            <ul>
-                <li>Language bas niveau - concurrent direct de C ou de C++</li>
-                <li class="fragment">Développé par Mozilla (début en 2010, release en 2015)</li>
-                <li class="fragment">Accent mis sur la securité (au niveau de la mémoire) et la vitesse (d'exécution)
-                </li>
-                <li class="fragment">Langage le plus aimé sur stackoverflow depuis 7 ans</li>
             </ul>
         </section>
 
@@ -124,8 +123,8 @@ fn sum_of_even_double(vec: Vec&lt;i32>) -> i32 {
 fn sum_of_even_double(vec: Vec&lt;i32>) -> i32 {
 </code></pre>
             <ul>
-                <li>u8, u16, u32, u64, u128</li>
-                <li>i8, i16, i32, i64, i128</li>
+                <li>u8, u16, u32, u64, u128, usize</li>
+                <li>i8, i16, i32, i64, i128, isize</li>
                 <li>f32, f64</li>
             </ul>
 
@@ -256,7 +255,7 @@ fn print_color(beer: Beer) -> String {
 
         <section>
             <h2>String hell</h2>
-            <pre ><code data-trim class="rust">
+            <pre><code data-trim class="rust">
       Beer::Bottle => "transparent".to_owned(),
             </code></pre>
             <ul>
@@ -326,6 +325,18 @@ let v:Volume = Surface(2.3) * Length(3.);
         </section>
 
         <section>
+            <h2>Pas de null</h2>
+            <pre><code data-trim class="rust">
+fn divide(nb1: f32, nb2: f32): Option&lt;f32> {
+    if nb2 == 0 { None } else { Some(nb1/nb2) }
+}
+
+let a: f32 = divide(1, 2)?;
+
+            </code></pre>
+        </section>
+
+        <section>
             <h2>Gestion des erreurs</h2>
             <ul>
                 <li class="fragment">Gestion explicite</li>
@@ -367,7 +378,8 @@ fn divide_strs(str1: &str, str2: &str) -> Result&lt;f64, String> {
 
         <section>
             <h2>Tests</h2>
-            <p>Dans le fichier d'implémentation<p>
+            <p>Dans le fichier d'implémentation
+            <p>
             <pre><code data-trim class="rust">
 #[cfg(test)]
 mod tests {
@@ -385,7 +397,7 @@ mod tests {
 
         <section>
             <h2>Ou est le bas niveau&nbsp;?</h2>
-            <img src="images/basement.webp" />
+            <img src="images/basement.webp"/>
 
         </section>
 
@@ -482,15 +494,20 @@ let coffee_machine2 = CoffeeMachine::new(&user) ;
                 <li class="fragment">test</li>
                 <li class="fragment">fmt</li>
                 <li class="fragment">build</li>
-                <li class="fragment"><span style="vertical-align: middle;">clippy</span> <img src="images/clippy.jpg" style="vertical-align: middle;width:50px" /></li>
+                <li class="fragment"><span style="vertical-align: middle;">clippy</span> <img src="images/clippy.jpg"
+                                                                                              style="vertical-align: middle;width:50px"/>
+                </li>
             </ul>
         </section>
 
+
         <section>
-            <h2>Reste du monde</h2>
+            <h2>Pleins d'autres trucs</h2>
             <ul>
+                <li>Macros</li>
                 <li>Bindings C</li>
                 <li>WASM</li>
+                <li>etc.</li>
             </ul>
         </section>
 
