--- a/index.html
+++ b/index.html
@@ -56,6 +56,35 @@
                 </section>
 
                 <section>
+                    <h2>Qui suis je?</h2>
+                    <ul
+                            style="
+              display: inline-block;
+              width: 600px;
+              vertical-align: top;
+              position: relative;
+            "
+                    >
+                        <li>Benoît Lemoine</li>
+                        <li>
+                            Développeur Fullstack <br />(TS, Scala, Rust, ...) <br />
+                            aimant la programmation fonctionnelle <br />chez
+                            <a href="http://www.decathlon.ca">Decathlon</a> à Montréal
+                        </li>
+                        <li>
+                            <a href="https://activities.decathlon.ca/"
+                            >https://activities.decathlon.ca</a
+                            >
+                        </li>
+                        <li>
+                            <a href="https://twitter.com/benoit_lemoine">@benoit_lemoine</a>
+                        </li>
+                    </ul>
+
+                </section>
+
+
+                <section>
                     <h2>Rust&nbsp;?</h2>
                     <ul>
                     	<li>Language bas niveau - concurrent direct de C ou de C++</li>
